[metadata]
name = Taxo-Matcher
version = 0.2
author = Logan Whitehouse
author_email = lswhiteh@unc.edu
description = A tool for parsing and extracting taxon synonyms.
url = https://github.com/Lswhiteh/taxo-matcher
project_urls = 
    Issues = https://github.com/Lswhiteh/taxo-matcher/issues
    GitHub = https://github.com/Lswhiteh/taxo-matcher
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    population genetics
    phylogenetics
    taxonomy
license = MIT

[options]
python_requires = >=3.6
include_package_data = True
packages = taxomatcher
install_requires = 
    biopython
    tqdm
    pygbif

[options.entry_points]
console_scripts =
    taxomatcher = taxomatcher.taxomatcher:main