[metadata]
name = taxomatcher
version = 0.3
author = Logan Whitehouse
author_email = lswhiteh@unc.edu
description = A tool for parsing and extracting taxon synonyms.
url = https://github.com/Lswhiteh/taxomatcher
project_urls = 
    Issues = https://github.com/Lswhiteh/taxomatcher/issues
    GitHub = https://github.com/Lswhiteh/taxomatcher
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    population genetics
    phylogenetics
    taxonomy
license = MIT

[options]
python_requires = >=3.6
include_package_data = True
packages = taxomatcher
install_requires = 
    biopython
    tqdm
    pygbif
    pandas

[options.entry_points]
console_scripts =
    taxomatcher = taxomatcher.taxomatcher:main