[metadata]
name = phylomatcher
version = 0.3.2
author = Logan Whitehouse
author_email = lswhiteh@unc.edu
description = A tool for parsing and extracting taxon synonyms.
url = https://github.com/Lswhiteh/phylomatcher
project_urls = 
    Issues = https://github.com/Lswhiteh/phylomatcher/issues
    GitHub = https://github.com/Lswhiteh/phylomatcher
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    population genetics
    phylogenetics
    taxonomy
license = MIT

[options]
python_requires = >=3.6
include_package_data = True
packages = phylomatcher
install_requires = 
    biopython
    tqdm
    pygbif
    pandas

[options.entry_points]
console_scripts =
    phylomatcher = phylomatcher.phylomatcher:main